--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
+<div style="margin: 5em;">
+<button (click)="login()">Login</button>
+<button (click)="logout()">Logout</button>
+</div>
 
 <router-outlet *ngIf="token"></router-outlet>
